--- a/CRISP-DM.ipynb
+++ b/CRISP-DM.ipynb
@@ -13,7 +13,8 @@
    "source": [
     "##### Data\n",
     "- Who Eats The Food We Grow: https://www.kaggle.com/dorbicycle/world-foodfeed-production\n",
-    "- Global Food & Agriculture Statistics: https://www.kaggle.com/unitednations/global-food-agriculture-statistics"
+    "- Global Food & Agriculture Statistics: https://www.kaggle.com/unitednations/global-food-agriculture-statistics\n",
+    "- Environmental Impact of Food Production: https://www.kaggle.com/selfvivek/environment-impact-of-food-production"
    ]
   },
   {
@@ -27,7 +28,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### write 2 paragraphs that briefly explains your problem, your methodology, and your findings, and business recommendations as a result of your findings"
+    "I've been passionate about food since I was a young child; having the fortune to have grown up on a farm in the Mid-West, growing my own food is engrained in my personality. As I've grown up, I have become more fascinated with the realization that growing food for personal consumption isn't something that is quite as commonplace in other regions of the U.S. I happened to be visiting my old neighbors when I went back home this summer when it all clicked together. The staple of America's identity is being replaced by outsourced, lower quality food.\n",
+    "\n",
+    "As I gathered my data and explored this issue more in depth, I was curious to know how other countries are approaching the world food economy."
    ]
   },
   {
@@ -166,42 +169,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### fao_raw_files\n",
-    "TBD"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 3. Data Preparation"
    ]
   },
@@ -209,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Through SQL and Pandas, perform any necessary data cleaning and develop a query that pulls in all relevant data for modeling, including any merging of tables. Be sure to document any data that you choose to drop or otherwise exclude. This is also the phase to consider any feature scaling or one-hot encoding required to feed the data into your particular model."
+    "I focused heavily on data preparation and engineering in this project. Utilizing pandas and various sources, I was able to calculate the emissions per country by year over the course of 53 years (1961-2013). I wanted more hands-on experience with engineering useful features and drawing insights from the data. My main goal was to really cement my personal foundations for data analysis in a way that made sense to me. "
    ]
   },
   {
@@ -223,9 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similar to the Mod 3 project, the focus is on prediction. Good prediction is a matter of the model generalizing well. Steps we can take to assure good generalization include: testing the model on unseen data, cross-validation, and regularization. What sort of model should you build?\n",
-    "\n",
-    "Here you will also likely encounter problems with computational capacity. Figure out how to use smaller samples of your data in order to tweak hyperparameters. Investigate cloud tools with hardware acceleration (e.g. Google Colab is a free one) in order to run your analysis with larger sets of data and more versions of the model."
+    "In this project, I did not focus heavily on modeling as others have. I started to gather ideas and frameworks; but unfortunately ran out of time. I do however plan to focus on this step post-capstone as I believe it is a vital skill towards my future career."
    ]
   },
   {
@@ -239,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Recall that there are many different metrics we might use for evaluating a classification model. Accuracy is intuitive, but can be misleading, especially if you have class imbalances in your target. Perhaps, depending on you're defining things, it is more important to minimize false positives, or false negatives. It might therefore be more appropriate to focus on precision or recall. You might also calculate the AUC-ROC to measure your model's discrimination."
+    "N/A"
    ]
   },
   {
@@ -267,11 +232,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "I allowed the exploration of the data to really show me what to ask and what to dig deeper into. Over previous modules I've noticed that I have a tendency to close off my mind to outside influences once I have chosen my 'questions.' It is exactly for that reason why I strayed away from the concreteness of questions during the capstone. \n",
+    "\n",
+    "Approaching the data this way really allowed me to engineer some interesting features and gain insights in ways that I wouldn't have done otherwise.\n",
+    "\n",
+    "I'm proud of the work that I have done, and look forward to continuing this journey or gathering knowledge and application!\n",
+    "\n",
+    "Live. Love. Code. -Flatiron"
+   ]
   }
  ],
  "metadata": {
